# qr_code_finder

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  package.xml
include/: candidate.h  evaluation.h  qr_utilities.h  qrfinder.h  settings.h
launch/: camera_publisher1.launch  debug_no_camera.sh  qr_no_camera.launch  qrfinder.launch  run_debug.sh  set_camera_parameters.sh  zbar.launch
src/: candidate.cc  evaluation.cc  main.cc  qr_utilities.cc  qrfinder.cc
